<resources>
    <string name="app_name">爱搜云</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="fb">写点什么吧..</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_readmore">&#xf178;</string>
    <string name="icon_answer">&#xf095;</string>
    <string name="icon_mute">&#xf131;</string>
    <string name="icon_like">&#xf087;</string>
    <string name="icon_share">&#xf064;</string>
    <string name="icon_follow">&#xf005;</string>
    <string name="icon_android">&#xf17b;</string>
    <string name="icon_dropbox">&#xf16b;</string>
    <string name="icon_soundcloud">&#xf1be;</string>
    <string name="icon_spotify">&#xf1bc;</string>
    <string name="icon_vine">&#xf1ca;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_tumbler">&#xf173;</string>
    <string name="icon_stackoverflow">&#xf16c;</string>
    <string name="icon_gplus">&#xf0d5;</string>
    <string name="icon_facebook">&#xf09a;</string>
    <string name="icon_entypo_facebook">&#59140;</string>
    <string name="icon_behance">&#xf1b4;</string>
    <string name="icon_dribble">&#xf17d;</string>
    <string name="icon_send">&#xf1d8;</string>
    <string name="icon_download">&#xf0ed;</string>
    <string name="icon_upload">&#xf0ee;</string>
    <string name="icon_config">&#xf085;</string>
    <string name="feedback_contact_hint">留下您的联系方式吧，以便跟您取得联系</string>
    <string name="feedback_content_hint">意见反馈</string>
    <string name="submit">提交</string>
    <string name="mock_record_first">常见的音乐随机播放算法主要有两种：一是Shuffle算法；二是Random算法</string>
    <string name="mock_record_second">开源项目几乎都使用版本控制系统来对代码进行维护，著名的版本控制软件有诸如CVS、Rational ClearCase、Microsoft Visual SourceSafe、Git、Subversion、Mercurial等等</string>
    <string name="feedback_record">反馈记录</string>
    <string name="request_content">请输入反馈的意见</string>
    <string name="waiting">正在处理，请稍等片刻…</string>
    <string name="feedback_success">发送成功</string>
    <string name="feedback_failed">发送失败</string>
    <string name="str_text">play</string>
    <string name="back_exit_tips">再按一次返回键退出应用</string>
    <string name="back_exit_qq">QQ群号已复制到剪切板</string>
    <string name="back_exit_no">暂时还没有缓存哦</string>
    <string name="back_exit_success">缓存清除成功</string>
    <string name="back_exit_tips_no"></string>
    <string name="register_nickname_hint">请输入注册用户名</string>
     <string name="register_nickname_hint1">请输入生日</string>
     <string name="change_pwd_mail">请输入注册时填写的邮箱</string>
    <string name="register_email_hint">请输入注册邮箱</string>
    <string name="register_password_hint">请输入密码</string>
     <string name="change_password_hint">请输入原始密码</string>
       <string name="change_password_new_hint">请输入新密码</string>
    <string name="register">注册</string>
    <string name="change_pwd">确定</string>
    <string name="register_have_account">已有帐号，直接登录</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_account_hint">请输入帐号</string>
    <string name="login">登录</string>
    <string name="register_account">没有帐号？快速注册</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_confirm_button_Know">"知道了"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"演示如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">为了您的隐私安全，请创建一个锁定用户的手势密码，方便以后登录。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="gesture_drawPwd">请绘制手势密码</string>
    <string name="gesturepwd_unlock">3次失败后，需要重新登录。</string>
    <string name="gesture_save">保存</string>
    <string name="gesture_Redraw">重绘</string>
    <string name="gesture_drawUnlock">绘制解锁图案</string>
    <string name="toastSetPedSucces">密码设置成功</string>
    <string name="toastLogin">登录</string>
    <string name="toastUnlock">解锁成功</string>
    <string name="toastlock">您已3次输错密码，再试1次到登录界面。</string>
    <string name="confirm">确定</string>
    <string name="please_select">请选择</string>
    <string name="activity_about">关于</string>
    <string name="activity_about_code">代码：%s</string>
    <string name="activity_about_name">版本：%s</string>
    <string name="activity_book">书籍信息</string>
    <string name="activity_content_first_chapter">已是最初的章节！</string>
    <string name="activity_content_image_error">图片加载错误！</string>
    <string name="activity_content_last_chapter">已是最后的章节！</string>
    <string name="activity_content_switch_volume">再次点击切换章节！</string>
    <string name="activity_download_exist">已下载！</string>
    <string name="activity_download_progress">准备下载 …</string>
    <string name="activity_download_progress_update">正在下载 … %1$dKB/%2$dKB</string>
    <string name="activity_download_success">下载成功！</string>
    <string name="activity_illustration_error">图片加错错误！</string>
    <string name="activity_illustration_save_success">图片已保存至：%s</string>
    <string name="activity_index">索引</string>
    <string name="activity_main_exit">再次点击退出程序哟~</string>
    <string name="activity_main_menu_about">关于</string>
    <string name="activity_main_menu_index">索引</string>
    <string name="activity_main_menu_setting">设置</string>
    <string name="activity_main_no_data">"似乎没找到数据呢
要不要到这里找找看 (๑•̀ㅂ•́)و✧"</string>
    <string name="activity_setting">设置</string>
    <string name="activity_setting_advance">高级设置</string>
    <string name="activity_setting_advance_alwayson">屏幕常亮</string>
    <string name="activity_setting_advance_alwayson_summary">仅在阅读页面生效</string>
    <string name="activity_setting_advance_nightmode">夜间模式</string>
    <string name="activity_setting_advance_nightmode_summary">不会改变屏幕亮度，请手动控制</string>
    <string name="activity_setting_advance_traditional">繁体输出</string>
    <string name="activity_setting_advance_traditional_summary">将书籍内容转换为繁体中文输出</string>
    <string name="activity_setting_basic">基本设置</string>
    <string name="activity_setting_basic_size">字体大小</string>
    <string name="activity_setting_basic_size_summary">当前大小：%s</string>
    <string name="activity_setting_basic_space">行间间距</string>
    <string name="activity_setting_basic_space_summary">当前大小：%s</string>
    <string name="activity_setting_other">其他设置</string>
    <string name="activity_setting_other_clearcache">清理缓存</string>
    <string name="activity_setting_other_clearcache_summary">清理网络缓存，可能解决图片加载失败问题</string>
    <string name="activity_setting_other_update">检查更新</string>
    <string name="activity_splash_message">Powered By iQing.in</string>
    <string name="activity_volume_bookmark">书签</string>
    <string name="activity_volume_list">章节</string>
    <string name="common_backdrop">回炉重做啦，稍后回来！</string>
    <string name="common_confirm">确认</string>
    <string name="common_dev">功能开发中 _(:з」∠)_</string>
    <string name="common_empty">没有符合条件的内容 …</string>
    <string name="common_loading">正在加载数据 …</string>
    <string name="common_no">否</string>
    <string name="common_yes">是</string>
    <string name="dialog_clear_cache_message">正在清理缓存 …</string>
    <string name="dialog_content_menu_illustration">查看插画</string>
    <string name="dialog_content_menu_setting">阅读设置</string>
    <string name="dialog_generate_cover_message">"(๑•̀ㅂ•́)و✧ 
 正在生成封面 …"</string>
    <string name="dialog_generate_cover_message_progress">"(๑•̀ㅂ•́)و✧ 
 正在生成封面 … %1$d/%2$d"</string>
    <string name="dialog_load_book_message">"(๑•̀ㅂ•́)و✧ 
 正在加载书籍 …"</string>
    <string name="dialog_load_book_message_progress">"(๑•̀ㅂ•́)و✧ 
 正在加载书籍 … %1$d/%2$d"</string>
    <string name="item_book_author">作者：%s</string>
    <string name="item_book_id">编号：%s</string>
    <string name="item_book_press">文库：%s</string>
    <string name="item_intro">暂无简介。</string>
    <string name="item_volume_title">标题：%s</string>
    <string name="item_volume_updatetime">时间：%s</string>
    <string name="umeng_update_no">已是最新版本！</string>
    <string name="umeng_update_timeout">连接超时，请检查网络连接或者稍后重试！</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="activity_base_book_list_author">作者：%s</string>
    <string name="activity_base_book_list_end">[ 完结 ]</string>
    <string name="activity_base_book_list_update">更新：%s</string>
    <string name="activity_base_book_list_state">状态:</string>
</resources>