<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f2f2"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_head"
            style="@style/login_add"
            android:contentDescription="@null" />

        <LinearLayout style="@style/login_content" >

            <EditText
                android:id="@+id/ed_nickname"
                style="@style/login_input"
                android:drawableLeft="@drawable/icon_login_user"
                android:hint="@string/register_nickname_hint"
                android:inputType="text" />

            <View style="@style/line_gray_horizontal" />

            <EditText
                android:id="@+id/ed_email"
                style="@style/login_input"
                android:drawableLeft="@drawable/icon_register_email"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />

            <View style="@style/line_gray_horizontal" />

            <EditText
                android:id="@+id/ed_birthday"
                style="@style/login_input"
                android:drawableLeft="@drawable/icon_login_user"
                android:hint="@string/register_nickname_hint1"
                android:inputType="text" />

            <View style="@style/line_gray_horizontal" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/ed_password"
                    style="@style/login_input"
                    android:drawableLeft="@drawable/icon_login_lock"
                    android:hint="@string/register_password_hint"
                    android:inputType="textPassword"
                    android:paddingRight="40.0dip" />

                <ImageView
                    android:id="@+id/view_password"
                    style="@style/login_view_pwd"
                    android:contentDescription="@null" />
            </FrameLayout>

            <View style="@style/line_gray_horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            style="@style/login_button"
            android:text="@string/register" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TextView
            android:id="@+id/go_login"
            style="@style/login_button_bottom"
            android:text="@string/register_have_account" />
    </LinearLayout>

</ScrollView>