<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f2f2"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout style="@style/login_content" >

            <EditText
                android:id="@+id/ed_change_email"
                style="@style/login_input"
                android:drawableLeft="@drawable/icon_register_email"
                android:hint="@string/change_pwd_mail"
                android:inputType="text" />

            <View style="@style/line_gray_horizontal" />

            <EditText
                android:id="@+id/ed_change_password"
                style="@style/login_input"
                android:drawableLeft="@drawable/icon_login_lock"
                android:hint="@string/change_password_hint"
                android:inputType="textPassword"
                android:paddingRight="40.0dip" />

            <View style="@style/line_gray_horizontal" />

            <EditText
                android:id="@+id/ed_change_new_password"
                style="@style/login_input"
                android:drawableLeft="@drawable/icon_login_lock"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:paddingRight="40.0dip" />

            <View style="@style/line_gray_horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_change_pwd"
            style="@style/login_button"
            android:text="@string/change_pwd" />
    </LinearLayout>

</ScrollView>